--- a/package.json
+++ b/package.json
@@ -3,23 +3,49 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.2",
+    "@mantine/carousel": "^6.0.17",
+    "@mantine/core": "^6.0.17",
+    "@mantine/dates": "^6.0.17",
+    "@mantine/dropzone": "^6.0.17",
+    "@mantine/ds": "^6.0.17",
+    "@mantine/form": "^6.0.17",
+    "@mantine/hooks": "^6.0.17",
+    "@mantine/modals": "^6.0.17",
+    "@mantine/notifications": "^6.0.17",
+    "@mantine/nprogress": "^6.0.17",
+    "@mantine/prism": "^6.0.17",
+    "@mantine/spotlight": "^6.0.17",
+    "@mantine/tiptap": "^6.0.17",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@tabler/icons-react": "^2.27.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-link": "^2.0.4",
+    "@tiptap/react": "^2.0.4",
+    "@tiptap/starter-kit": "^2.0.4",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "dayjs": "^1.11.9",
+    "embla-carousel-react": "^8.0.0-rc11",
+    "flowbite": "^1.7.0",
+    "flowbite-react": "^0.4.11",
     "material-ui": "^0.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "vite": "vite --open",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +65,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.4.1",
+    "tailwindcss": "^3.3.3"
   }
 }
