--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "styled-components": "^6.0.0-rc.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.7",
