--- a/package.json
+++ b/package.json
@@ -3,41 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.2",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.0",
-    "@mui/styled-engine-sc": "^5.12.0",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@tabler/icons-react": "^2.27.0",
+    "@mui/material": "^5.15.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@tiptap/extension-link": "^2.0.4",
-    "@tiptap/react": "^2.0.4",
-    "@tiptap/starter-kit": "^2.0.4",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
-    "dayjs": "^1.11.9",
-    "embla-carousel-react": "^8.0.0-rc11",
-    "flowbite": "^1.7.0",
-    "flowbite-react": "^0.4.11",
-    "material-ui": "^0.20.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
-    "styled-components": "^6.0.0-rc.1",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.7",
+    "styled-components": "^5.3.9",
+    "vite": "^5.0.10",
+    "vite-plugin-svgr": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "vite": "vite --open",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "test": "vite test",
+    "eject": "vite eject",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": []
@@ -55,7 +42,9 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
     "prettier-plugin-tailwindcss": "^0.4.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.0"
   }
 }
